doglang.output
Terminals which are not used

   ERROR


State 5 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: DOG ID LBRACE statement_list RBRACE
    2        | DOG ID LBRACE error RBRACE

    3 statement_list: /* empty */
    4               | statement_list statement

    5 statement: declaration
    6          | assignment
    7          | print_stmt
    8          | error_stmt
    9          | wait_stmt
   10          | loop_stmt
   11          | repeat_stmt
   12          | if_stmt
   13          | error SEMICOLON

   14 declaration: TREAT ID ASSIGN expression SEMICOLON
   15            | TREAT ID SEMICOLON

   16 assignment: ID ASSIGN expression SEMICOLON

   17 print_stmt: BARK expression SEMICOLON

   18 error_stmt: HOWL expression SEMICOLON

   19 wait_stmt: SIT SEMICOLON

   20 loop_stmt: CHASE LPAREN expression RPAREN LBRACE statement_list RBRACE

   21 repeat_stmt: REPEAT expression TIMES LBRACE statement_list RBRACE

   22 if_stmt: IF LPAREN expression RPAREN LBRACE statement_list RBRACE
   23        | IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE

   24 expression: NUMBER
   25           | ID
   26           | expression PLUS expression
   27           | expression MINUS expression
   28           | expression MULT expression
   29           | expression DIV expression
   30           | expression MOD expression
   31           | expression EQ expression
   32           | expression NE expression
   33           | expression LT expression
   34           | expression GT expression
   35           | expression LE expression
   36           | expression GE expression
   37           | LPAREN expression RPAREN


Terminals, with rules where they appear

$end (0) 0
error (256) 2 13
DOG (258) 1 2
TREAT (259) 14 15
BARK (260) 17
HOWL (261) 18
SIT (262) 19
CHASE (263) 20
REPEAT (264) 21
TIMES (265) 21
IF (266) 22 23
ELSE (267) 23
LPAREN (268) 20 22 23 37
RPAREN (269) 20 22 23 37
LBRACE (270) 1 2 20 21 22 23
RBRACE (271) 1 2 20 21 22 23
SEMICOLON (272) 13 14 15 16 17 18 19
ASSIGN (273) 14 16
PLUS (274) 26
MINUS (275) 27
MULT (276) 28
DIV (277) 29
MOD (278) 30
EQ (279) 31
NE (280) 32
LT (281) 33
GT (282) 34
LE (283) 35
GE (284) 36
ID (285) 1 2 14 15 16 25
NUMBER (286) 24
ERROR (287)


Nonterminals, with rules where they appear

$accept (33)
    on left: 0
program (34)
    on left: 1 2, on right: 0
statement_list (35)
    on left: 3 4, on right: 1 4 20 21 22 23
statement (36)
    on left: 5 6 7 8 9 10 11 12 13, on right: 4
declaration (37)
    on left: 14 15, on right: 5
assignment (38)
    on left: 16, on right: 6
print_stmt (39)
    on left: 17, on right: 7
error_stmt (40)
    on left: 18, on right: 8
wait_stmt (41)
    on left: 19, on right: 9
loop_stmt (42)
    on left: 20, on right: 10
repeat_stmt (43)
    on left: 21, on right: 11
if_stmt (44)
    on left: 22 23, on right: 12
expression (45)
    on left: 24 25 26 27 28 29 30 31 32 33 34 35 36 37,
    on right: 14 16 17 18 20 21 22 23 26 27 28 29 30 31 32 33 34 35
    36 37


state 0

    0 $accept: . program $end

    DOG  shift, and go to state 1

    program  go to state 2


state 1

    1 program: DOG . ID LBRACE statement_list RBRACE
    2        | DOG . ID LBRACE error RBRACE

    ID  shift, and go to state 3


state 2

    0 $accept: program . $end

    $end  shift, and go to state 4


state 3

    1 program: DOG ID . LBRACE statement_list RBRACE
    2        | DOG ID . LBRACE error RBRACE

    LBRACE  shift, and go to state 5


state 4

    0 $accept: program $end .

    $default  accept


state 5

    1 program: DOG ID LBRACE . statement_list RBRACE
    2        | DOG ID LBRACE . error RBRACE

    error  shift, and go to state 6

    error   [reduce using rule 3 (statement_list)]
    TREAT   reduce using rule 3 (statement_list)
    BARK    reduce using rule 3 (statement_list)
    HOWL    reduce using rule 3 (statement_list)
    SIT     reduce using rule 3 (statement_list)
    CHASE   reduce using rule 3 (statement_list)
    REPEAT  reduce using rule 3 (statement_list)
    IF      reduce using rule 3 (statement_list)
    RBRACE  reduce using rule 3 (statement_list)
    ID      reduce using rule 3 (statement_list)

    statement_list  go to state 7


state 6

    2 program: DOG ID LBRACE error . RBRACE

    RBRACE  shift, and go to state 8


state 7

    1 program: DOG ID LBRACE statement_list . RBRACE
    4 statement_list: statement_list . statement

    error   shift, and go to state 9
    TREAT   shift, and go to state 10
    BARK    shift, and go to state 11
    HOWL    shift, and go to state 12
    SIT     shift, and go to state 13
    CHASE   shift, and go to state 14
    REPEAT  shift, and go to state 15
    IF      shift, and go to state 16
    RBRACE  shift, and go to state 17
    ID      shift, and go to state 18

    statement    go to state 19
    declaration  go to state 20
    assignment   go to state 21
    print_stmt   go to state 22
    error_stmt   go to state 23
    wait_stmt    go to state 24
    loop_stmt    go to state 25
    repeat_stmt  go to state 26
    if_stmt      go to state 27


state 8

    2 program: DOG ID LBRACE error RBRACE .

    $default  reduce using rule 2 (program)


state 9

   13 statement: error . SEMICOLON

    SEMICOLON  shift, and go to state 28


state 10

   14 declaration: TREAT . ID ASSIGN expression SEMICOLON
   15            | TREAT . ID SEMICOLON

    ID  shift, and go to state 29


state 11

   17 print_stmt: BARK . expression SEMICOLON

    LPAREN  shift, and go to state 30
    ID      shift, and go to state 31
    NUMBER  shift, and go to state 32

    expression  go to state 33


state 12

   18 error_stmt: HOWL . expression SEMICOLON

    LPAREN  shift, and go to state 30
    ID      shift, and go to state 31
    NUMBER  shift, and go to state 32

    expression  go to state 34


state 13

   19 wait_stmt: SIT . SEMICOLON

    SEMICOLON  shift, and go to state 35


state 14

   20 loop_stmt: CHASE . LPAREN expression RPAREN LBRACE statement_list RBRACE

    LPAREN  shift, and go to state 36


state 15

   21 repeat_stmt: REPEAT . expression TIMES LBRACE statement_list RBRACE

    LPAREN  shift, and go to state 30
    ID      shift, and go to state 31
    NUMBER  shift, and go to state 32

    expression  go to state 37


state 16

   22 if_stmt: IF . LPAREN expression RPAREN LBRACE statement_list RBRACE
   23        | IF . LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE

    LPAREN  shift, and go to state 38


state 17

    1 program: DOG ID LBRACE statement_list RBRACE .

    $default  reduce using rule 1 (program)


state 18

   16 assignment: ID . ASSIGN expression SEMICOLON

    ASSIGN  shift, and go to state 39


state 19

    4 statement_list: statement_list statement .

    $default  reduce using rule 4 (statement_list)


state 20

    5 statement: declaration .

    $default  reduce using rule 5 (statement)


state 21

    6 statement: assignment .

    $default  reduce using rule 6 (statement)


state 22

    7 statement: print_stmt .

    $default  reduce using rule 7 (statement)


state 23

    8 statement: error_stmt .

    $default  reduce using rule 8 (statement)


state 24

    9 statement: wait_stmt .

    $default  reduce using rule 9 (statement)


state 25

   10 statement: loop_stmt .

    $default  reduce using rule 10 (statement)


state 26

   11 statement: repeat_stmt .

    $default  reduce using rule 11 (statement)


state 27

   12 statement: if_stmt .

    $default  reduce using rule 12 (statement)


state 28

   13 statement: error SEMICOLON .

    $default  reduce using rule 13 (statement)


state 29

   14 declaration: TREAT ID . ASSIGN expression SEMICOLON
   15            | TREAT ID . SEMICOLON

    SEMICOLON  shift, and go to state 40
    ASSIGN     shift, and go to state 41


state 30

   37 expression: LPAREN . expression RPAREN

    LPAREN  shift, and go to state 30
    ID      shift, and go to state 31
    NUMBER  shift, and go to state 32

    expression  go to state 42


state 31

   25 expression: ID .

    $default  reduce using rule 25 (expression)


state 32

   24 expression: NUMBER .

    $default  reduce using rule 24 (expression)


state 33

   17 print_stmt: BARK expression . SEMICOLON
   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   30           | expression . MOD expression
   31           | expression . EQ expression
   32           | expression . NE expression
   33           | expression . LT expression
   34           | expression . GT expression
   35           | expression . LE expression
   36           | expression . GE expression

    SEMICOLON  shift, and go to state 43
    PLUS       shift, and go to state 44
    MINUS      shift, and go to state 45
    MULT       shift, and go to state 46
    DIV        shift, and go to state 47
    MOD        shift, and go to state 48
    EQ         shift, and go to state 49
    NE         shift, and go to state 50
    LT         shift, and go to state 51
    GT         shift, and go to state 52
    LE         shift, and go to state 53
    GE         shift, and go to state 54


state 34

   18 error_stmt: HOWL expression . SEMICOLON
   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   30           | expression . MOD expression
   31           | expression . EQ expression
   32           | expression . NE expression
   33           | expression . LT expression
   34           | expression . GT expression
   35           | expression . LE expression
   36           | expression . GE expression

    SEMICOLON  shift, and go to state 55
    PLUS       shift, and go to state 44
    MINUS      shift, and go to state 45
    MULT       shift, and go to state 46
    DIV        shift, and go to state 47
    MOD        shift, and go to state 48
    EQ         shift, and go to state 49
    NE         shift, and go to state 50
    LT         shift, and go to state 51
    GT         shift, and go to state 52
    LE         shift, and go to state 53
    GE         shift, and go to state 54


state 35

   19 wait_stmt: SIT SEMICOLON .

    $default  reduce using rule 19 (wait_stmt)


state 36

   20 loop_stmt: CHASE LPAREN . expression RPAREN LBRACE statement_list RBRACE

    LPAREN  shift, and go to state 30
    ID      shift, and go to state 31
    NUMBER  shift, and go to state 32

    expression  go to state 56


state 37

   21 repeat_stmt: REPEAT expression . TIMES LBRACE statement_list RBRACE
   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   30           | expression . MOD expression
   31           | expression . EQ expression
   32           | expression . NE expression
   33           | expression . LT expression
   34           | expression . GT expression
   35           | expression . LE expression
   36           | expression . GE expression

    TIMES  shift, and go to state 57
    PLUS   shift, and go to state 44
    MINUS  shift, and go to state 45
    MULT   shift, and go to state 46
    DIV    shift, and go to state 47
    MOD    shift, and go to state 48
    EQ     shift, and go to state 49
    NE     shift, and go to state 50
    LT     shift, and go to state 51
    GT     shift, and go to state 52
    LE     shift, and go to state 53
    GE     shift, and go to state 54


state 38

   22 if_stmt: IF LPAREN . expression RPAREN LBRACE statement_list RBRACE
   23        | IF LPAREN . expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE

    LPAREN  shift, and go to state 30
    ID      shift, and go to state 31
    NUMBER  shift, and go to state 32

    expression  go to state 58


state 39

   16 assignment: ID ASSIGN . expression SEMICOLON

    LPAREN  shift, and go to state 30
    ID      shift, and go to state 31
    NUMBER  shift, and go to state 32

    expression  go to state 59


state 40

   15 declaration: TREAT ID SEMICOLON .

    $default  reduce using rule 15 (declaration)


state 41

   14 declaration: TREAT ID ASSIGN . expression SEMICOLON

    LPAREN  shift, and go to state 30
    ID      shift, and go to state 31
    NUMBER  shift, and go to state 32

    expression  go to state 60


state 42

   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   30           | expression . MOD expression
   31           | expression . EQ expression
   32           | expression . NE expression
   33           | expression . LT expression
   34           | expression . GT expression
   35           | expression . LE expression
   36           | expression . GE expression
   37           | LPAREN expression . RPAREN

    RPAREN  shift, and go to state 61
    PLUS    shift, and go to state 44
    MINUS   shift, and go to state 45
    MULT    shift, and go to state 46
    DIV     shift, and go to state 47
    MOD     shift, and go to state 48
    EQ      shift, and go to state 49
    NE      shift, and go to state 50
    LT      shift, and go to state 51
    GT      shift, and go to state 52
    LE      shift, and go to state 53
    GE      shift, and go to state 54


state 43

   17 print_stmt: BARK expression SEMICOLON .

    $default  reduce using rule 17 (print_stmt)


state 44

   26 expression: expression PLUS . expression

    LPAREN  shift, and go to state 30
    ID      shift, and go to state 31
    NUMBER  shift, and go to state 32

    expression  go to state 62


state 45

   27 expression: expression MINUS . expression

    LPAREN  shift, and go to state 30
    ID      shift, and go to state 31
    NUMBER  shift, and go to state 32

    expression  go to state 63


state 46

   28 expression: expression MULT . expression

    LPAREN  shift, and go to state 30
    ID      shift, and go to state 31
    NUMBER  shift, and go to state 32

    expression  go to state 64


state 47

   29 expression: expression DIV . expression

    LPAREN  shift, and go to state 30
    ID      shift, and go to state 31
    NUMBER  shift, and go to state 32

    expression  go to state 65


state 48

   30 expression: expression MOD . expression

    LPAREN  shift, and go to state 30
    ID      shift, and go to state 31
    NUMBER  shift, and go to state 32

    expression  go to state 66


state 49

   31 expression: expression EQ . expression

    LPAREN  shift, and go to state 30
    ID      shift, and go to state 31
    NUMBER  shift, and go to state 32

    expression  go to state 67


state 50

   32 expression: expression NE . expression

    LPAREN  shift, and go to state 30
    ID      shift, and go to state 31
    NUMBER  shift, and go to state 32

    expression  go to state 68


state 51

   33 expression: expression LT . expression

    LPAREN  shift, and go to state 30
    ID      shift, and go to state 31
    NUMBER  shift, and go to state 32

    expression  go to state 69


state 52

   34 expression: expression GT . expression

    LPAREN  shift, and go to state 30
    ID      shift, and go to state 31
    NUMBER  shift, and go to state 32

    expression  go to state 70


state 53

   35 expression: expression LE . expression

    LPAREN  shift, and go to state 30
    ID      shift, and go to state 31
    NUMBER  shift, and go to state 32

    expression  go to state 71


state 54

   36 expression: expression GE . expression

    LPAREN  shift, and go to state 30
    ID      shift, and go to state 31
    NUMBER  shift, and go to state 32

    expression  go to state 72


state 55

   18 error_stmt: HOWL expression SEMICOLON .

    $default  reduce using rule 18 (error_stmt)


state 56

   20 loop_stmt: CHASE LPAREN expression . RPAREN LBRACE statement_list RBRACE
   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   30           | expression . MOD expression
   31           | expression . EQ expression
   32           | expression . NE expression
   33           | expression . LT expression
   34           | expression . GT expression
   35           | expression . LE expression
   36           | expression . GE expression

    RPAREN  shift, and go to state 73
    PLUS    shift, and go to state 44
    MINUS   shift, and go to state 45
    MULT    shift, and go to state 46
    DIV     shift, and go to state 47
    MOD     shift, and go to state 48
    EQ      shift, and go to state 49
    NE      shift, and go to state 50
    LT      shift, and go to state 51
    GT      shift, and go to state 52
    LE      shift, and go to state 53
    GE      shift, and go to state 54


state 57

   21 repeat_stmt: REPEAT expression TIMES . LBRACE statement_list RBRACE

    LBRACE  shift, and go to state 74


state 58

   22 if_stmt: IF LPAREN expression . RPAREN LBRACE statement_list RBRACE
   23        | IF LPAREN expression . RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE
   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   30           | expression . MOD expression
   31           | expression . EQ expression
   32           | expression . NE expression
   33           | expression . LT expression
   34           | expression . GT expression
   35           | expression . LE expression
   36           | expression . GE expression

    RPAREN  shift, and go to state 75
    PLUS    shift, and go to state 44
    MINUS   shift, and go to state 45
    MULT    shift, and go to state 46
    DIV     shift, and go to state 47
    MOD     shift, and go to state 48
    EQ      shift, and go to state 49
    NE      shift, and go to state 50
    LT      shift, and go to state 51
    GT      shift, and go to state 52
    LE      shift, and go to state 53
    GE      shift, and go to state 54


state 59

   16 assignment: ID ASSIGN expression . SEMICOLON
   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   30           | expression . MOD expression
   31           | expression . EQ expression
   32           | expression . NE expression
   33           | expression . LT expression
   34           | expression . GT expression
   35           | expression . LE expression
   36           | expression . GE expression

    SEMICOLON  shift, and go to state 76
    PLUS       shift, and go to state 44
    MINUS      shift, and go to state 45
    MULT       shift, and go to state 46
    DIV        shift, and go to state 47
    MOD        shift, and go to state 48
    EQ         shift, and go to state 49
    NE         shift, and go to state 50
    LT         shift, and go to state 51
    GT         shift, and go to state 52
    LE         shift, and go to state 53
    GE         shift, and go to state 54


state 60

   14 declaration: TREAT ID ASSIGN expression . SEMICOLON
   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   30           | expression . MOD expression
   31           | expression . EQ expression
   32           | expression . NE expression
   33           | expression . LT expression
   34           | expression . GT expression
   35           | expression . LE expression
   36           | expression . GE expression

    SEMICOLON  shift, and go to state 77
    PLUS       shift, and go to state 44
    MINUS      shift, and go to state 45
    MULT       shift, and go to state 46
    DIV        shift, and go to state 47
    MOD        shift, and go to state 48
    EQ         shift, and go to state 49
    NE         shift, and go to state 50
    LT         shift, and go to state 51
    GT         shift, and go to state 52
    LE         shift, and go to state 53
    GE         shift, and go to state 54


state 61

   37 expression: LPAREN expression RPAREN .

    $default  reduce using rule 37 (expression)


state 62

   26 expression: expression . PLUS expression
   26           | expression PLUS expression .
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   30           | expression . MOD expression
   31           | expression . EQ expression
   32           | expression . NE expression
   33           | expression . LT expression
   34           | expression . GT expression
   35           | expression . LE expression
   36           | expression . GE expression

    MULT  shift, and go to state 46
    DIV   shift, and go to state 47
    MOD   shift, and go to state 48

    $default  reduce using rule 26 (expression)


state 63

   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   27           | expression MINUS expression .
   28           | expression . MULT expression
   29           | expression . DIV expression
   30           | expression . MOD expression
   31           | expression . EQ expression
   32           | expression . NE expression
   33           | expression . LT expression
   34           | expression . GT expression
   35           | expression . LE expression
   36           | expression . GE expression

    MULT  shift, and go to state 46
    DIV   shift, and go to state 47
    MOD   shift, and go to state 48

    $default  reduce using rule 27 (expression)


state 64

   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   28           | expression MULT expression .
   29           | expression . DIV expression
   30           | expression . MOD expression
   31           | expression . EQ expression
   32           | expression . NE expression
   33           | expression . LT expression
   34           | expression . GT expression
   35           | expression . LE expression
   36           | expression . GE expression

    $default  reduce using rule 28 (expression)


state 65

   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   29           | expression DIV expression .
   30           | expression . MOD expression
   31           | expression . EQ expression
   32           | expression . NE expression
   33           | expression . LT expression
   34           | expression . GT expression
   35           | expression . LE expression
   36           | expression . GE expression

    $default  reduce using rule 29 (expression)


state 66

   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   30           | expression . MOD expression
   30           | expression MOD expression .
   31           | expression . EQ expression
   32           | expression . NE expression
   33           | expression . LT expression
   34           | expression . GT expression
   35           | expression . LE expression
   36           | expression . GE expression

    $default  reduce using rule 30 (expression)


state 67

   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   30           | expression . MOD expression
   31           | expression . EQ expression
   31           | expression EQ expression .
   32           | expression . NE expression
   33           | expression . LT expression
   34           | expression . GT expression
   35           | expression . LE expression
   36           | expression . GE expression

    PLUS   shift, and go to state 44
    MINUS  shift, and go to state 45
    MULT   shift, and go to state 46
    DIV    shift, and go to state 47
    MOD    shift, and go to state 48
    LT     shift, and go to state 51
    GT     shift, and go to state 52
    LE     shift, and go to state 53
    GE     shift, and go to state 54

    $default  reduce using rule 31 (expression)


state 68

   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   30           | expression . MOD expression
   31           | expression . EQ expression
   32           | expression . NE expression
   32           | expression NE expression .
   33           | expression . LT expression
   34           | expression . GT expression
   35           | expression . LE expression
   36           | expression . GE expression

    PLUS   shift, and go to state 44
    MINUS  shift, and go to state 45
    MULT   shift, and go to state 46
    DIV    shift, and go to state 47
    MOD    shift, and go to state 48
    LT     shift, and go to state 51
    GT     shift, and go to state 52
    LE     shift, and go to state 53
    GE     shift, and go to state 54

    $default  reduce using rule 32 (expression)


state 69

   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   30           | expression . MOD expression
   31           | expression . EQ expression
   32           | expression . NE expression
   33           | expression . LT expression
   33           | expression LT expression .
   34           | expression . GT expression
   35           | expression . LE expression
   36           | expression . GE expression

    PLUS   shift, and go to state 44
    MINUS  shift, and go to state 45
    MULT   shift, and go to state 46
    DIV    shift, and go to state 47
    MOD    shift, and go to state 48

    $default  reduce using rule 33 (expression)


state 70

   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   30           | expression . MOD expression
   31           | expression . EQ expression
   32           | expression . NE expression
   33           | expression . LT expression
   34           | expression . GT expression
   34           | expression GT expression .
   35           | expression . LE expression
   36           | expression . GE expression

    PLUS   shift, and go to state 44
    MINUS  shift, and go to state 45
    MULT   shift, and go to state 46
    DIV    shift, and go to state 47
    MOD    shift, and go to state 48

    $default  reduce using rule 34 (expression)


state 71

   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   30           | expression . MOD expression
   31           | expression . EQ expression
   32           | expression . NE expression
   33           | expression . LT expression
   34           | expression . GT expression
   35           | expression . LE expression
   35           | expression LE expression .
   36           | expression . GE expression

    PLUS   shift, and go to state 44
    MINUS  shift, and go to state 45
    MULT   shift, and go to state 46
    DIV    shift, and go to state 47
    MOD    shift, and go to state 48

    $default  reduce using rule 35 (expression)


state 72

   26 expression: expression . PLUS expression
   27           | expression . MINUS expression
   28           | expression . MULT expression
   29           | expression . DIV expression
   30           | expression . MOD expression
   31           | expression . EQ expression
   32           | expression . NE expression
   33           | expression . LT expression
   34           | expression . GT expression
   35           | expression . LE expression
   36           | expression . GE expression
   36           | expression GE expression .

    PLUS   shift, and go to state 44
    MINUS  shift, and go to state 45
    MULT   shift, and go to state 46
    DIV    shift, and go to state 47
    MOD    shift, and go to state 48

    $default  reduce using rule 36 (expression)


state 73

   20 loop_stmt: CHASE LPAREN expression RPAREN . LBRACE statement_list RBRACE

    LBRACE  shift, and go to state 78


state 74

   21 repeat_stmt: REPEAT expression TIMES LBRACE . statement_list RBRACE

    $default  reduce using rule 3 (statement_list)

    statement_list  go to state 79


state 75

   22 if_stmt: IF LPAREN expression RPAREN . LBRACE statement_list RBRACE
   23        | IF LPAREN expression RPAREN . LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE

    LBRACE  shift, and go to state 80


state 76

   16 assignment: ID ASSIGN expression SEMICOLON .

    $default  reduce using rule 16 (assignment)


state 77

   14 declaration: TREAT ID ASSIGN expression SEMICOLON .

    $default  reduce using rule 14 (declaration)


state 78

   20 loop_stmt: CHASE LPAREN expression RPAREN LBRACE . statement_list RBRACE

    $default  reduce using rule 3 (statement_list)

    statement_list  go to state 81


state 79

    4 statement_list: statement_list . statement
   21 repeat_stmt: REPEAT expression TIMES LBRACE statement_list . RBRACE

    error   shift, and go to state 9
    TREAT   shift, and go to state 10
    BARK    shift, and go to state 11
    HOWL    shift, and go to state 12
    SIT     shift, and go to state 13
    CHASE   shift, and go to state 14
    REPEAT  shift, and go to state 15
    IF      shift, and go to state 16
    RBRACE  shift, and go to state 82
    ID      shift, and go to state 18

    statement    go to state 19
    declaration  go to state 20
    assignment   go to state 21
    print_stmt   go to state 22
    error_stmt   go to state 23
    wait_stmt    go to state 24
    loop_stmt    go to state 25
    repeat_stmt  go to state 26
    if_stmt      go to state 27


state 80

   22 if_stmt: IF LPAREN expression RPAREN LBRACE . statement_list RBRACE
   23        | IF LPAREN expression RPAREN LBRACE . statement_list RBRACE ELSE LBRACE statement_list RBRACE

    $default  reduce using rule 3 (statement_list)

    statement_list  go to state 83


state 81

    4 statement_list: statement_list . statement
   20 loop_stmt: CHASE LPAREN expression RPAREN LBRACE statement_list . RBRACE

    error   shift, and go to state 9
    TREAT   shift, and go to state 10
    BARK    shift, and go to state 11
    HOWL    shift, and go to state 12
    SIT     shift, and go to state 13
    CHASE   shift, and go to state 14
    REPEAT  shift, and go to state 15
    IF      shift, and go to state 16
    RBRACE  shift, and go to state 84
    ID      shift, and go to state 18

    statement    go to state 19
    declaration  go to state 20
    assignment   go to state 21
    print_stmt   go to state 22
    error_stmt   go to state 23
    wait_stmt    go to state 24
    loop_stmt    go to state 25
    repeat_stmt  go to state 26
    if_stmt      go to state 27


state 82

   21 repeat_stmt: REPEAT expression TIMES LBRACE statement_list RBRACE .

    $default  reduce using rule 21 (repeat_stmt)


state 83

    4 statement_list: statement_list . statement
   22 if_stmt: IF LPAREN expression RPAREN LBRACE statement_list . RBRACE
   23        | IF LPAREN expression RPAREN LBRACE statement_list . RBRACE ELSE LBRACE statement_list RBRACE

    error   shift, and go to state 9
    TREAT   shift, and go to state 10
    BARK    shift, and go to state 11
    HOWL    shift, and go to state 12
    SIT     shift, and go to state 13
    CHASE   shift, and go to state 14
    REPEAT  shift, and go to state 15
    IF      shift, and go to state 16
    RBRACE  shift, and go to state 85
    ID      shift, and go to state 18

    statement    go to state 19
    declaration  go to state 20
    assignment   go to state 21
    print_stmt   go to state 22
    error_stmt   go to state 23
    wait_stmt    go to state 24
    loop_stmt    go to state 25
    repeat_stmt  go to state 26
    if_stmt      go to state 27


state 84

   20 loop_stmt: CHASE LPAREN expression RPAREN LBRACE statement_list RBRACE .

    $default  reduce using rule 20 (loop_stmt)


state 85

   22 if_stmt: IF LPAREN expression RPAREN LBRACE statement_list RBRACE .
   23        | IF LPAREN expression RPAREN LBRACE statement_list RBRACE . ELSE LBRACE statement_list RBRACE

    ELSE  shift, and go to state 86

    $default  reduce using rule 22 (if_stmt)


state 86

   23 if_stmt: IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE . LBRACE statement_list RBRACE

    LBRACE  shift, and go to state 87


state 87

   23 if_stmt: IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE . statement_list RBRACE

    $default  reduce using rule 3 (statement_list)

    statement_list  go to state 88


state 88

    4 statement_list: statement_list . statement
   23 if_stmt: IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list . RBRACE

    error   shift, and go to state 9
    TREAT   shift, and go to state 10
    BARK    shift, and go to state 11
    HOWL    shift, and go to state 12
    SIT     shift, and go to state 13
    CHASE   shift, and go to state 14
    REPEAT  shift, and go to state 15
    IF      shift, and go to state 16
    RBRACE  shift, and go to state 89
    ID      shift, and go to state 18

    statement    go to state 19
    declaration  go to state 20
    assignment   go to state 21
    print_stmt   go to state 22
    error_stmt   go to state 23
    wait_stmt    go to state 24
    loop_stmt    go to state 25
    repeat_stmt  go to state 26
    if_stmt      go to state 27


state 89

   23 if_stmt: IF LPAREN expression RPAREN LBRACE statement_list RBRACE ELSE LBRACE statement_list RBRACE .

    $default  reduce using rule 23 (if_stmt)
